...
        case .strings: "Strings"
        case .clarinet: "Synth Clarinet"
        case .flute: "Synth Flute"
        case .vibraphone: "Vibraphone"
        case .warmOrgan: "Warm Organ"
        case .sawtooth: "Sawtooth"
        case .sine: "Sine"
        case .square: "Square"
        case .triangle: "Triangle"
        }
    }
}

...
